--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,8 @@
         android:layout_marginTop="35dp"
         android:textColor="@color/colorTextIcons"
         android:textSize="40sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:id="@+id/appNameTextView" />
 
     <Button
         android:layout_width="match_parent"
@@ -40,14 +41,11 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="number"
-        android:ems="10"
         android:id="@+id/locationEditText"
         android:layout_above="@+id/findRestaurantsButton"
-        android:layout_centerHorizontal="true"
         android:background="@color/dim_foreground_disabled_material_dark"
         android:layout_marginBottom="10dp"
         android:hint="Enter Zip Code"
-        android:textAlignment="center" />
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
