--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,9 +43,11 @@
         android:layout_height="wrap_content"
         android:id="@+id/locationEditText"
         android:layout_above="@+id/findRestaurantsButton"
-        android:background="@color/dim_foreground_disabled_material_dark"
+        android:background="@color/button_material_light"
         android:layout_marginBottom="10dp"
+        android:padding="5dp"
         android:hint="Enter Zip Code"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:allowUndo="false" />
 
 </RelativeLayout>
